--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,19 +10,31 @@ ul {
 
 li {
   cursor: pointer;
-  margin: 10px 0;
+  margin: 5px 0; 
 }
 
 table {
-  margin: 20px auto;
+  margin: 10px auto; 
   border-collapse: collapse;
 }
 
 th, td {
   border: 1px solid #ddd;
-  padding: 8px;
+  padding: 4px; 
 }
 
 th {
   background-color: #f2f2f2;
+}
+
+.Box {
+  padding: 0 !important; 
+}
+
+.Grid-item {
+  padding: 4px !important; 
+}
+
+hr {
+  margin: 5px 0 !important; 
 }
